--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.1.0",
+    "@mui/lab": "^5.0.0-alpha.57",
     "@mui/material": "^5.1.1",
     "@mui/x-data-grid": "^5.0.1",
     "@testing-library/jest-dom": "^5.15.0",
