--- a/client/package.json
+++ b/client/package.json
@@ -12,19 +12,26 @@
     "@mui/lab": "^5.0.0-alpha.57",
     "@mui/material": "^5.1.1",
     "@mui/x-data-grid": "^5.0.1",
+    "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "customize-cra": "^1.0.0",
     "formi": "^0.4.0",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
+    "react-bootstrap": "^2.0.3",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-native-elements": "^3.4.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^8.1.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
